fix: remove set_deeppavlov_root function usage

--- a/deeppavlov/models/evolution/Results_analysis.ipynb
+++ b/deeppavlov/models/evolution/Results_analysis.ipynb
@@ -14,7 +14,7 @@
     "import json\n",
     "%matplotlib inline\n",
     "\n",
-    "from deeppavlov.core.commands.utils import set_deeppavlov_root, expand_path\n",
+    "from deeppavlov.core.commands.utils import expand_path\n",
     "from deeppavlov.models.evolution.evolution_param_generator import ParamsEvolution"
    ]
   },
@@ -40,7 +40,6 @@
     "with open(CONFIG_FILE, \"r\", encoding='utf8') as f:\n",
     "    basic_params = json.load(f)\n",
     "\n",
-    "set_deeppavlov_root(basic_params)\n",
     "print(\"Considered basic config:\\n{}\".format(json.dumps(basic_params, indent=2)))"
    ]
   },
